# ElfAnalyzer

./: ElfAnalyzer.py  PKG-INFO  README.md  pyproject.toml  setup.cfg  setup.py
ElfAnalyzer.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
