[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ElfAnalyzer"
version = "0.0.2"
dependencies = []
authors = [
    {name = "Maurice Lambert", email = "mauricelambert434@gmail.com"},
]
maintainers = [
    {name = "Maurice Lambert", email = "mauricelambert434@gmail.com"},
]
description = 'This module parses and analyzes ELF file for Forensic and investigations.'
readme = {file = "README.md", content-type = "text/markdown"}
# url = "https://github.com/mauricelambert/ElfAnalyzer"
# download-url = "https://mauricelambert.github.io/info/python/security/ElfAnalyzer.pyz"
classifiers = [
    "Topic :: System",
    "Topic :: Security",
    "Environment :: Console",
    "Topic :: System :: Shells",
    'Operating System :: POSIX',
    "Natural Language :: English",
    "Topic :: System :: Networking",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Topic :: System :: System Shells",
    'Operating System :: MacOS :: MacOS X',
    "Programming Language :: Python :: 3.8",
    'Operating System :: Microsoft :: Windows',
    "Topic :: System :: Systems Administration",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
keywords = ['forensic', 'investigations', 'ELF', 'analysis', 'ELF-parser', 'ELF-analyzer']
license = {text = "GPL-3.0 License"}
requires-python = ">=3.8"

[project.scripts]
ElfAnalyzer = "ElfAnalyzer:main"

[project.urls]
"Github" = "https://github.com/mauricelambert/ElfAnalyzer"
"Documentation" = "https://mauricelambert.github.io/info/python/security/ElfAnalyzer.html"
"Python Executable" = "https://mauricelambert.github.io/info/python/security/ElfAnalyzer.pyz"
"Windows Executable" = "https://mauricelambert.github.io/info/python/security/ElfAnalyzer.exe"

[tool.setuptools]
include-package-data = true
platforms = ['Windows', 'Linux', "MacOS"]
py-modules = ['ElfAnalyzer']
packages = []
script-files = []

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
