[metadata]
name = ElfAnalyzer
version = 0.0.1
author = Maurice Lambert
author_email = mauricelambert434@gmail.com
maintainer = Maurice Lambert
maintainer_email = mauricelambert434@gmail.com
description = This module parses and analyzes ELF file for Forensic and investigations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mauricelambert/ElfAnalyzer
project_urls = Github=https://github.com/mauricelambert/ElfAnalyzer, Documentation=https://mauricelambert.github.io/info/python/security/ElfAnalyzer.html, Python Executable=https://mauricelambert.github.io/info/python/security/ElfAnalyzer.pyz, Windows Executable=https://mauricelambert.github.io/info/python/security/ElfAnalyzer.exe
download_url = https://mauricelambert.github.io/info/python/security/ElfAnalyzer.pyz
classifiers =
    Topic :: System
    Topic :: Security
    Environment :: Console
    Topic :: System :: Shells
    Operating System :: POSIX
    Natural Language :: English
    Topic :: System :: Networking
    Topic :: Internet :: WWW/HTTP
    Programming Language :: Python
    Intended Audience :: Developers
    Topic :: System :: System Shells
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.8
    Operating System :: Microsoft :: Windows
    Topic :: System :: Systems Administration
    Development Status :: 5 - Production/Stable
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
keywords = forensic, investigations, ELF, analysis, ELF-parser, ELF-analyzer
platforms = Windows, Linux, MacOS
license = GPL-3.0 License
license_files = LICENSE.txt
# requires = 

[options]
include_package_data = True
python_requires = >=3.8
scripts = 
packages = 
py_modules = ElfAnalyzer
install_requires = 

[options.entry_points]
console_scripts =
    ElfAnalyzer = ElfAnalyzer:main

[egg_info]
tag_build = 
tag_date = 0
